cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_17433_lab4.2.3-vpcEG.yml
AWSTemplateFormatVersion: 2010-09-09
Description:  "lesson 4 vpc endpoint gateway to s3 specifically"

Resources:
  Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: "stelligent-u-423-jason.davis.labs"
      Tags:
        - Key: user
          Value: "jason.davis.labs"
        - Key: stelligent-u-lesson
          Value: "4.2"
        - Key: stelligent-u-lab
          Value: "4.2.3"

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.17.0.0/16
      Tags:
        - Key: user
          Value: "jason.davis.labs"
        - Key: stelligent-u-lesson
          Value: "4.2"
        - Key: stelligent-u-lab
          Value: "4.2.3"
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 172.17.1.0/24
      Tags:
        - Key: user
          Value: "jason.davis.labs"
        - Key: stelligent-u-lesson
          Value: "4.2"
        - Key: stelligent-u-lab
          Value: "4.2.3"

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-03368e982f317ae48"
      InstanceType: "t2.small"
      KeyName: "lab413-su-jmd"
      SubnetId: !Ref Subnet
      SecurityGroupIds: [ !Ref InstanceSecurityGroup ]

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow ping and ssh
        VpcId: !Ref VPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  EIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref EC2Instance

  PublicRoute:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PublicRouteTable
        DestinationCidrBlock: '0.0.0.0/0'
        GatewayId:
          Ref: InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: user
          Value: "jason.davis.labs"
        - Key: stelligent-u-lesson
          Value: "4.2"
        - Key: stelligent-u-lab
          Value: "4.2.3"

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: Subnet
      RouteTableId:
        Ref: PublicRouteTable

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: user
          Value: "jason.davis.labs"
        - Key: stelligent-u-lesson
          Value: "4.2"
        - Key: stelligent-u-lab
          Value: "4.2.3"

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  S3Endpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - 's3:GetObject'
            Resource:
              - 'arn:aws:s3:::stelligent-u-423-jason.davis.labs/*'
      RouteTableIds:
        - !Ref PublicRouteTable
        # - !Ref routetableB
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref VPC

Outputs:
  IID:
    Description: instance id
    Value: !Ref EC2Instance
    Export:
      Name: !Sub ${AWS::StackName}-instanceid
  PIP:
    Description: private ip for other CF templates
    Value: !GetAtt EC2Instance.PrivateIp
    Export:
      Name: !Sub ${AWS::StackName}-privateip
  PrIP:
    Description: public ip of the instance for other CF templates
    Value: !GetAtt EC2Instance.PublicIp
    Export:
      Name: !Sub ${AWS::StackName}-publicip
  VPC:
    Description: vpc for other CF templates
    Value: !Ref VPC
    Export:
      Name: !Sub ${AWS::StackName}-vpc
  Subnet:
    Description: subnet for other CF templates
    Value: !Ref Subnet
    Export:
      Name: !Sub ${AWS::StackName}-subnet
  PublicRouteTable:
    Description: routetable for other CF templates
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub ${AWS::StackName}-routetable
